--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Enter to my heart</title>
+	<title>Entry to my heart</title>
 	<link rel="stylesheet" type="text/css" href="home.css">
 </head>
 
